--- a/package.json
+++ b/package.json
@@ -10,10 +10,22 @@
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "antd": "^5.6.4",
+    "axios": "^1.4.0",
+    "echarts": "^5.4.2",
+    "npm": "^9.8.0",
+    "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1",
+    "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
+    "sass": "^1.63.6",
+    "sass-loader": "^13.3.2",
     "typescript": "^4.9.5",
+    "wangeditor": "^4.7.15",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/nprogress": "^0.2.0"
   }
 }
