--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.6.4",
     "axios": "^1.4.0",
     "echarts": "^5.4.2",
+    "http-proxy-middleware": "^2.0.6",
     "moment": "^2.29.4",
     "nanoid": "^5.0.1",
     "npm": "^9.8.0",
